Only check the touched markdown files in PR for the Verify link step

--- a/eng/pipelines/templates/steps/analyze.yml
+++ b/eng/pipelines/templates/steps/analyze.yml
@@ -6,11 +6,12 @@ parameters:
   Scope: 'sdk/...'
 
 steps:
-          
-  - template: /eng/common/pipelines/templates/steps/verify-links.yml
-    parameters:
-      Directory: sdk/${{ parameters.ServiceDirectory }}
-      CheckLinkGuidance: $true
+  - ${{ if eq(variables['Build.Reason'], 'PullRequest') }}:
+    - template: /eng/common/pipelines/templates/steps/verify-links.yml
+      parameters:
+        Directory: ''
+        Urls: (git diff origin/${env:SYSTEM_PULLREQUEST_TARGETBRANCH} HEAD --name-only -- *.md)
+        CheckLinkGuidance: $true
 
   - script: |
       curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin ${{parameters.LintVersion}}
