fix service directory

--- a/sdk/arm/keyvault/ci.yml
+++ b/sdk/arm/keyvault/ci.yml
@@ -12,4 +12,4 @@ pr:
 stages:
 - template: ../../../eng/pipelines/templates/jobs/archetype-sdk-client-samples.yml
   parameters:
-    ServiceDirectory: 'keyvault'
+    ServiceDirectory: 'arm/keyvault'
