--- a/sdk/tables/aztables/ci.yml
+++ b/sdk/tables/aztables/ci.yml
@@ -10,6 +10,6 @@ pr:
     - sdk/tables/aztables/
 
 stages:
-- template: ../../eng/pipelines/templates/jobs/archetype-sdk-client.yml
+- template: ../../../eng/pipelines/templates/jobs/archetype-sdk-client.yml
   parameters:
     ServiceDirectory: 'tables'
