--- a/storage/recordings/StorageFileSuite/TestCreateFile.yaml
+++ b/storage/recordings/StorageFileSuite/TestCreateFile.yaml
@@ -6,12 +6,74 @@ interactions:
     form: {}
     headers:
       Authorization:
-      - SharedKey golangrocksonazure:kAhlyI1UXZDCz7sdwM9tQqZiXNOGDpv3rSl9maBe6Ts=
+      - SharedKey golangrocksonazure:AAave3XLyxew2jB/ZWBFAJ0I4Qr6lZWlSTI4u1bRHTo=
       User-Agent:
       - Go/go1.15.1 (amd64-windows) azure-storage-go/v52.6.0 api-version/2018-03-28
         file
       x-ms-date:
-      - Tue, 13 Apr 2021 16:04:08 GMT
+      - Thu, 15 Apr 2021 14:39:41 GMT
+      x-ms-version:
+      - "2018-03-28"
+    url: https://golangrocksonazure.file.core.windows.net/?comp=list
+    method: GET
+  response:
+    body: "\uFEFF\x3C\x3F\x78\x6D\x6C\x20\x76\x65\x72\x73\x69\x6F\x6E\x3D\"\x31\x2E\x30\"\x20\x65\x6E\x63\x6F\x64\x69\x6E\x67\x3D\"\x75\x74\x66\x2D\x38\"\x3F\x3E\x3C\x45\x6E\x75\x6D\x65\x72\x61\x74\x69\x6F\x6E\x52\x65\x73\x75\x6C\x74\x73\x20\x53\x65\x72\x76\x69\x63\x65\x45\x6E\x64\x70\x6F\x69\x6E\x74\x3D\"\x68\x74\x74\x70\x73\x3A\x2F\x2F\x67\x6F\x6C\x61\x6E\x67\x72\x6F\x63\x6B\x73\x6F\x6E\x61\x7A\x75\x72\x65\x2E\x66\x69\x6C\x65\x2E\x63\x6F\x72\x65\x2E\x77\x69\x6E\x64\x6F\x77\x73\x2E\x6E\x65\x74\x2F\"\x3E\x3C\x53\x68\x61\x72\x65\x73\x3E\x3C\x53\x68\x61\x72\x65\x3E\x3C\x4E\x61\x6D\x65\x3E\x73\x68\x61\x72\x65\x2D\x34\x33\x33\x73\x74\x6F\x72\x61\x67\x65\x73\x68\x61\x72\x65\x73\x75\x69\x74\x65\x74\x65\x73\x74\x73\x68\x61\x72\x65\x65\x78\x69\x73\x74\x73\x3C\x2F\x4E\x61\x6D\x65\x3E\x3C\x50\x72\x6F\x70\x65\x72\x74\x69\x65\x73\x3E\x3C\x4C\x61\x73\x74\x2D\x4D\x6F\x64\x69\x66\x69\x65\x64\x3E\x54\x68\x75\x2C\x20\x31\x35\x20\x41\x70\x72\x20\x32\x30\x32\x31\x20\x31\x34\x3A\x33\x37\x3A\x33\x33\x20\x47\x4D\x54\x3C\x2F\x4C\x61\x73\x74\x2D\x4D\x6F\x64\x69\x66\x69\x65\x64\x3E\x3C\x45\x74\x61\x67\x3E\"\x30\x78\x38\x44\x39\x30\x30\x31\x43\x30\x31\x43\x37\x32\x37\x41\x30\"\x3C\x2F\x45\x74\x61\x67\x3E\x3C\x51\x75\x6F\x74\x61\x3E\x35\x31\x32\x30\x3C\x2F\x51\x75\x6F\x74\x61\x3E\x3C\x2F\x50\x72\x6F\x70\x65\x72\x74\x69\x65\x73\x3E\x3C\x2F\x53\x68\x61\x72\x65\x3E\x3C\x2F\x53\x68\x61\x72\x65\x73\x3E\x3C\x4E\x65\x78\x74\x4D\x61\x72\x6B\x65\x72\x20\x2F\x3E\x3C\x2F\x45\x6E\x75\x6D\x65\x72\x61\x74\x69\x6F\x6E\x52\x65\x73\x75\x6C\x74\x73\x3E"
+    headers:
+      Content-Type:
+      - application/xml
+      Date:
+      - Thu, 15 Apr 2021 14:39:40 GMT
+      Server:
+      - Windows-Azure-File/1.0 Microsoft-HTTPAPI/2.0
+      X-Ms-Request-Id:
+      - c0ab38e3-301a-0049-0505-32dd06000000
+      X-Ms-Version:
+      - "2018-03-28"
+    status: 200 OK
+    code: 200
+    duration: ""
+- request:
+    body: ""
+    form: {}
+    headers:
+      Authorization:
+      - SharedKey golangrocksonazure:7k5dPhuoYKoxT1caAVVUh3fhRGCI74FOwlhxpRRa3/Q=
+      User-Agent:
+      - Go/go1.15.1 (amd64-windows) azure-storage-go/v52.6.0 api-version/2018-03-28
+        file
+      x-ms-date:
+      - Thu, 15 Apr 2021 14:39:41 GMT
+      x-ms-version:
+      - "2018-03-28"
+    url: https://golangrocksonazure.file.core.windows.net/share-433storagesharesuitetestshareexists?restype=share
+    method: DELETE
+  response:
+    body: ""
+    headers:
+      Content-Length:
+      - "0"
+      Date:
+      - Thu, 15 Apr 2021 14:39:40 GMT
+      Server:
+      - Windows-Azure-File/1.0 Microsoft-HTTPAPI/2.0
+      X-Ms-Request-Id:
+      - c0ab38e4-301a-0049-0605-32dd06000000
+      X-Ms-Version:
+      - "2018-03-28"
+    status: 202 Accepted
+    code: 202
+    duration: ""
+- request:
+    body: ""
+    form: {}
+    headers:
+      Authorization:
+      - SharedKey golangrocksonazure:Ioz/W4hFOn4zJ77CJyYCF9201uZ475ZJJ1dk7spQNMM=
+      User-Agent:
+      - Go/go1.15.1 (amd64-windows) azure-storage-go/v52.6.0 api-version/2018-03-28
+        file
+      x-ms-date:
+      - Thu, 15 Apr 2021 14:39:41 GMT
       x-ms-version:
       - "2018-03-28"
     url: https://golangrocksonazure.file.core.windows.net/share-31storagefilesuitetestcreatefile?restype=share
@@ -22,15 +84,15 @@ interactions:
       Content-Length:
       - "0"
       Date:
-      - Tue, 13 Apr 2021 16:04:07 GMT
+      - Thu, 15 Apr 2021 14:39:40 GMT
       Etag:
-      - '"0x8D8FE95C5080C77"'
+      - '"0x8D9001C4DA37615"'
       Last-Modified:
-      - Tue, 13 Apr 2021 16:04:08 GMT
+      - Thu, 15 Apr 2021 14:39:41 GMT
       Server:
       - Windows-Azure-File/1.0 Microsoft-HTTPAPI/2.0
       X-Ms-Request-Id:
-      - 92d9ca61-801a-0087-647e-300c88000000
+      - c0ab38e5-301a-0049-0705-32dd06000000
       X-Ms-Version:
       - "2018-03-28"
     status: 201 Created
@@ -41,12 +103,12 @@ interactions:
     form: {}
     headers:
       Authorization:
-      - SharedKey golangrocksonazure:FcPnPhQU+HDeVjMwUBSEPCSUkCotUBHqeVNYRJu9iOk=
+      - SharedKey golangrocksonazure:rmxh4dBKBRP4OPPawH/9yRPmkmGEzgIVSX+c1MtSvf8=
       User-Agent:
       - Go/go1.15.1 (amd64-windows) azure-storage-go/v52.6.0 api-version/2018-03-28
         file
       x-ms-date:
-      - Tue, 13 Apr 2021 16:04:08 GMT
+      - Thu, 15 Apr 2021 14:39:41 GMT
       x-ms-version:
       - "2018-03-28"
     url: https://golangrocksonazure.file.core.windows.net/share-31storagefilesuitetestcreatefile/one?restype=directory
@@ -57,15 +119,15 @@ interactions:
       Content-Length:
       - "0"
       Date:
-      - Tue, 13 Apr 2021 16:04:07 GMT
+      - Thu, 15 Apr 2021 14:39:40 GMT
       Etag:
-      - '"0x8D8FE95C50C8F2E"'
+      - '"0x8D9001C4DA95EA8"'
       Last-Modified:
-      - Tue, 13 Apr 2021 16:04:08 GMT
+      - Thu, 15 Apr 2021 14:39:41 GMT
       Server:
       - Windows-Azure-File/1.0 Microsoft-HTTPAPI/2.0
       X-Ms-Request-Id:
-      - 92d9ca63-801a-0087-657e-300c88000000
+      - c0ab38e7-301a-0049-0805-32dd06000000
       X-Ms-Request-Server-Encrypted:
       - "true"
       X-Ms-Version:
@@ -78,12 +140,12 @@ interactions:
     form: {}
     headers:
       Authorization:
-      - SharedKey golangrocksonazure:qlcgkKq4MwbI9EERZzBmAxd6w4lfXs6emVm+G2v5KDI=
+      - SharedKey golangrocksonazure:WYzicpELRLnP+A5DkYKHEaerb+4xpj5lhb13q33Bnj8=
       User-Agent:
       - Go/go1.15.1 (amd64-windows) azure-storage-go/v52.6.0 api-version/2018-03-28
         file
       x-ms-date:
-      - Tue, 13 Apr 2021 16:04:08 GMT
+      - Thu, 15 Apr 2021 14:39:41 GMT
       x-ms-version:
       - "2018-03-28"
     url: https://golangrocksonazure.file.core.windows.net/share-31storagefilesuitetestcreatefile/one/two?restype=directory
@@ -94,15 +156,15 @@ interactions:
       Content-Length:
       - "0"
       Date:
-      - Tue, 13 Apr 2021 16:04:07 GMT
+      - Thu, 15 Apr 2021 14:39:40 GMT
       Etag:
-      - '"0x8D8FE95C50FEB22"'
+      - '"0x8D9001C4DAF04FB"'
       Last-Modified:
-      - Tue, 13 Apr 2021 16:04:08 GMT
+      - Thu, 15 Apr 2021 14:39:41 GMT
       Server:
       - Windows-Azure-File/1.0 Microsoft-HTTPAPI/2.0
       X-Ms-Request-Id:
-      - 92d9ca64-801a-0087-667e-300c88000000
+      - c0ab38e8-301a-0049-0905-32dd06000000
       X-Ms-Request-Server-Encrypted:
       - "true"
       X-Ms-Version:
@@ -115,12 +177,12 @@ interactions:
     form: {}
     headers:
       Authorization:
-      - SharedKey golangrocksonazure:/p7pFK+DgZXQzgyaoes2u+Hxwhrl5fHKnDWTA0pbHV4=
+      - SharedKey golangrocksonazure:O5y7/7Hi6ULT2yQ4kN8xLVfwAnqFDB0H0w35Dg1lI2E=
       User-Agent:
       - Go/go1.15.1 (amd64-windows) azure-storage-go/v52.6.0 api-version/2018-03-28
         file
       x-ms-date:
-      - Tue, 13 Apr 2021 16:04:08 GMT
+      - Thu, 15 Apr 2021 14:39:41 GMT
       x-ms-version:
       - "2018-03-28"
     url: https://golangrocksonazure.file.core.windows.net/share-31storagefilesuitetestcreatefile/one/two/some.file
@@ -129,13 +191,13 @@ interactions:
     body: ""
     headers:
       Date:
-      - Tue, 13 Apr 2021 16:04:07 GMT
+      - Thu, 15 Apr 2021 14:39:40 GMT
       Server:
       - Windows-Azure-File/1.0 Microsoft-HTTPAPI/2.0
       X-Ms-Error-Code:
       - ResourceNotFound
       X-Ms-Request-Id:
-      - 92d9ca65-801a-0087-677e-300c88000000
+      - c0ab38e9-301a-0049-0a05-32dd06000000
       X-Ms-Version:
       - "2018-03-28"
     status: 404 The specified resource does not exist.
@@ -146,14 +208,14 @@ interactions:
     form: {}
     headers:
       Authorization:
-      - SharedKey golangrocksonazure:nZ9SniO00v2Bqx8VqKeD2qiSN8oh8auzRnwSbrR06cQ=
+      - SharedKey golangrocksonazure:/3kB1QEXxO4eQDUmIH/6ncOHIDbXKIrseqej0cLNc70=
       User-Agent:
       - Go/go1.15.1 (amd64-windows) azure-storage-go/v52.6.0 api-version/2018-03-28
         file
       x-ms-content-length:
       - "1024"
       x-ms-date:
-      - Tue, 13 Apr 2021 16:04:08 GMT
+      - Thu, 15 Apr 2021 14:39:41 GMT
       x-ms-type:
       - file
       x-ms-version:
@@ -166,15 +228,15 @@ interactions:
       Content-Length:
       - "0"
       Date:
-      - Tue, 13 Apr 2021 16:04:07 GMT
+      - Thu, 15 Apr 2021 14:39:40 GMT
       Etag:
-      - '"0x8D8FE95C5167C06"'
+      - '"0x8D9001C4DB6A780"'
       Last-Modified:
-      - Tue, 13 Apr 2021 16:04:08 GMT
+      - Thu, 15 Apr 2021 14:39:41 GMT
       Server:
       - Windows-Azure-File/1.0 Microsoft-HTTPAPI/2.0
       X-Ms-Request-Id:
-      - 92d9ca66-801a-0087-687e-300c88000000
+      - c0ab38ea-301a-0049-0b05-32dd06000000
       X-Ms-Request-Server-Encrypted:
       - "true"
       X-Ms-Version:
@@ -187,12 +249,12 @@ interactions:
     form: {}
     headers:
       Authorization:
-      - SharedKey golangrocksonazure:TM7HB1mdRv0ORrmPI0Uw1761f4iKqkSnZfiDFxdKcK8=
+      - SharedKey golangrocksonazure:ApSDgRmy2QeeGLWoiYV4ve7J1LqhVxtAtfH+ikO2KjE=
       User-Agent:
       - Go/go1.15.1 (amd64-windows) azure-storage-go/v52.6.0 api-version/2018-03-28
         file
       x-ms-date:
-      - Tue, 13 Apr 2021 16:04:08 GMT
+      - Thu, 15 Apr 2021 14:39:41 GMT
       x-ms-version:
       - "2018-03-28"
     url: https://golangrocksonazure.file.core.windows.net/share-31storagefilesuitetestcreatefile/one/two/some.file
@@ -203,11 +265,11 @@ interactions:
       Content-Length:
       - "0"
       Date:
-      - Tue, 13 Apr 2021 16:04:07 GMT
+      - Thu, 15 Apr 2021 14:39:40 GMT
       Server:
       - Windows-Azure-File/1.0 Microsoft-HTTPAPI/2.0
       X-Ms-Request-Id:
-      - 92d9ca67-801a-0087-697e-300c88000000
+      - c0ab38eb-301a-0049-0c05-32dd06000000
       X-Ms-Version:
       - "2018-03-28"
     status: 202 Accepted
@@ -218,12 +280,12 @@ interactions:
     form: {}
     headers:
       Authorization:
-      - SharedKey golangrocksonazure:/p7pFK+DgZXQzgyaoes2u+Hxwhrl5fHKnDWTA0pbHV4=
+      - SharedKey golangrocksonazure:O5y7/7Hi6ULT2yQ4kN8xLVfwAnqFDB0H0w35Dg1lI2E=
       User-Agent:
       - Go/go1.15.1 (amd64-windows) azure-storage-go/v52.6.0 api-version/2018-03-28
         file
       x-ms-date:
-      - Tue, 13 Apr 2021 16:04:08 GMT
+      - Thu, 15 Apr 2021 14:39:41 GMT
       x-ms-version:
       - "2018-03-28"
     url: https://golangrocksonazure.file.core.windows.net/share-31storagefilesuitetestcreatefile/one/two/some.file
@@ -232,13 +294,13 @@ interactions:
     body: ""
     headers:
       Date:
-      - Tue, 13 Apr 2021 16:04:07 GMT
+      - Thu, 15 Apr 2021 14:39:40 GMT
       Server:
       - Windows-Azure-File/1.0 Microsoft-HTTPAPI/2.0
       X-Ms-Error-Code:
       - ResourceNotFound
       X-Ms-Request-Id:
-      - 92d9ca68-801a-0087-6a7e-300c88000000
+      - c0ab38ec-301a-0049-0d05-32dd06000000
       X-Ms-Version:
       - "2018-03-28"
     status: 404 The specified resource does not exist.
@@ -249,12 +311,12 @@ interactions:
     form: {}
     headers:
       Authorization:
-      - SharedKey golangrocksonazure:YlELud4dKmJDTACYowEzsxs7nOOfSdddQTUtPPDcndw=
+      - SharedKey golangrocksonazure:u2/uBn/ej9KxeqVAUDK33uRpbD6MxDIfnZaZihh66PU=
       User-Agent:
       - Go/go1.15.1 (amd64-windows) azure-storage-go/v52.6.0 api-version/2018-03-28
         file
       x-ms-date:
-      - Tue, 13 Apr 2021 16:04:08 GMT
+      - Thu, 15 Apr 2021 14:39:41 GMT
       x-ms-version:
       - "2018-03-28"
     url: https://golangrocksonazure.file.core.windows.net/share-31storagefilesuitetestcreatefile?restype=share
@@ -265,11 +327,11 @@ interactions:
       Content-Length:
       - "0"
       Date:
-      - Tue, 13 Apr 2021 16:04:07 GMT
+      - Thu, 15 Apr 2021 14:39:40 GMT
       Server:
       - Windows-Azure-File/1.0 Microsoft-HTTPAPI/2.0
       X-Ms-Request-Id:
-      - 92d9ca69-801a-0087-6b7e-300c88000000
+      - c0ab38ed-301a-0049-0e05-32dd06000000
       X-Ms-Version:
       - "2018-03-28"
     status: 202 Accepted
