--- a/sdk/tables/aztables/recordings/TestTableClient_Cosmos/TestBatchAdd-variables.yaml
+++ b/sdk/tables/aztables/recordings/TestTableClient_Cosmos/TestBatchAdd-variables.yaml
@@ -2,5 +2,5 @@
 COSMOS_TABLES_ENDPOINT_SUFFIX: cosmos.azure.com
 TABLES_COSMOS_ACCOUNT_NAME: chrisstablesprim
 TABLES_PRIMARY_COSMOS_ACCOUNT_KEY: Kg==
-now: "2021-05-17T18:03:25.162469-05:00"
-randomSeed: "1621292603"
+now: "2021-05-18T10:12:35.7896607-05:00"
+randomSeed: "1621350754"
