--- a/sdk/storage/azblob/recordings/Test/TestContainerCreateInvalidName-variables.yaml
+++ b/sdk/storage/azblob/recordings/Test/TestContainerCreateInvalidName-variables.yaml
@@ -2,3 +2,5 @@
 AZURE_STORAGE_ACCOUNT_KEY: Kg==
 AZURE_STORAGE_ACCOUNT_NAME: azureblobstrgmohitcanada
 AZURE_STORAGE_ENDPOINT_SUFFIX: core.windows.net/
+SECONDARY_AZURE_STORAGE_ACCOUNT_KEY: Kg==
+SECONDARY_AZURE_STORAGE_ACCOUNT_NAME: azurestrgmohitfrance
