--- a/sdk/storage/azblob/ci.yml
+++ b/sdk/storage/azblob/ci.yml
@@ -12,4 +12,4 @@ pr:
 stages:
   - template: /eng/pipelines/templates/jobs/archetype-sdk-client.yml
     parameters:
-      ServiceDirectory: 'azblob'
+      ServiceDirectory: 'storage/azblob'
