--- a/sdk/tables/ci.yml
+++ b/sdk/tables/ci.yml
@@ -10,6 +10,6 @@ pr:
     - sdk/tables/
 
 stages:
-- template: ../../../eng/pipelines/templates/jobs/archetype-sdk-client.yml
+- template: /eng/pipelines/templates/jobs/archetype-sdk-client.yml
   parameters:
     ServiceDirectory: 'tables'
