--- a/sdk/tables/aztable/recordings/TestTableClient_Storage/TestCustomEntity.yaml
+++ b/sdk/tables/aztable/recordings/TestTableClient_Storage/TestCustomEntity.yaml
@@ -2,7 +2,7 @@
 version: 1
 interactions:
 - request:
-    body: '{"TableName":"gotable2ei5mqk4hyt5a"}'
+    body: '{"TableName":"gotableaif30nqn97uy2"}'
     form: {}
     headers:
       Accept:
@@ -19,29 +19,107 @@ interactions:
       - azsdk-go-aztable/<version> azsdk-go-aztable/<version> azcore/v0.16.2 (go1.16.5;
         Windows_NT)
       X-Ms-Date:
-      - Thu, 01 Jul 2021 16:10:10 GMT
+      - Thu, 01 Jul 2021 17:09:56 GMT
       X-Ms-Version:
       - "2019-02-02"
     url: https://seankaneprim.table.core.windows.net/Tables
     method: POST
   response:
-    body: '{"odata.error":{"code":"AuthenticationFailed","message":{"lang":"en-US","value":"Server
-      failed to authenticate the request. Make sure the value of Authorization header
-      is formed correctly including the signature.\nRequestId:caee54f9-d002-009d-5e93-6e1acf000000\nTime:2021-07-01T16:10:12.2634012Z"}}}'
+    body: '{"odata.metadata":"https://seankaneprim.table.core.windows.net/$metadata#Tables/@Element","TableName":"gotableaif30nqn97uy2"}'
     headers:
-      Content-Length:
-      - "299"
+      Cache-Control:
+      - no-cache
       Content-Type:
-      - application/json
+      - application/json;odata=minimalmetadata;streaming=true;charset=utf-8
       Date:
-      - Thu, 01 Jul 2021 16:10:12 GMT
+      - Thu, 01 Jul 2021 17:09:56 GMT
+      Location:
+      - https://seankaneprim.table.core.windows.net/Tables('gotableaif30nqn97uy2')
       Server:
-      - Microsoft-HTTPAPI/2.0
-      X-Ms-Error-Code:
-      - AuthenticationFailed
+      - Windows-Azure-Table/1.0 Microsoft-HTTPAPI/2.0
+      X-Content-Type-Options:
+      - nosniff
       X-Ms-Request-Id:
-      - caee54f9-d002-009d-5e93-6e1acf000000
-    status: 403 Server failed to authenticate the request. Make sure the value of
-      Authorization header is formed correctly including the signature.
-    code: 403
+      - 8fa8ab11-a002-003e-789b-6e7f0a000000
+      X-Ms-Version:
+      - "2019-02-02"
+    status: 201 Created
+    code: 201
+    duration: ""
+- request:
+    body: ""
+    form: {}
+    headers:
+      Accept:
+      - application/json;odata=minimalmetadata
+      Authorization:
+      - sanitized
+      Dataserviceversion:
+      - "3.0"
+      User-Agent:
+      - azsdk-go-aztable/<version> azsdk-go-aztable/<version> azcore/v0.16.2 (go1.16.5;
+        Windows_NT)
+      X-Ms-Date:
+      - Thu, 01 Jul 2021 17:09:56 GMT
+      X-Ms-Version:
+      - "2019-02-02"
+    url: https://seankaneprim.table.core.windows.net/gotableaif30nqn97uy2(PartitionKey='pk001',RowKey='rk001')
+    method: GET
+  response:
+    body: '{"odata.error":{"code":"ResourceNotFound","message":{"lang":"en-US","value":"The
+      specified resource does not exist.\nRequestId:8fa8ab41-a002-003e-249b-6e7f0a000000\nTime:2021-07-01T17:09:57.9505922Z"}}}'
+    headers:
+      Cache-Control:
+      - no-cache
+      Content-Type:
+      - application/json;odata=minimalmetadata;streaming=true;charset=utf-8
+      Date:
+      - Thu, 01 Jul 2021 17:09:56 GMT
+      Server:
+      - Windows-Azure-Table/1.0 Microsoft-HTTPAPI/2.0
+      X-Content-Type-Options:
+      - nosniff
+      X-Ms-Request-Id:
+      - 8fa8ab41-a002-003e-249b-6e7f0a000000
+      X-Ms-Version:
+      - "2019-02-02"
+    status: 404 Not Found
+    code: 404
+    duration: ""
+- request:
+    body: ""
+    form: {}
+    headers:
+      Accept:
+      - application/json
+      Authorization:
+      - sanitized
+      User-Agent:
+      - azsdk-go-aztable/<version> azsdk-go-aztable/<version> azcore/v0.16.2 (go1.16.5;
+        Windows_NT)
+      X-Ms-Date:
+      - Thu, 01 Jul 2021 17:09:56 GMT
+      X-Ms-Version:
+      - "2019-02-02"
+    url: https://seankaneprim.table.core.windows.net/Tables('gotableaif30nqn97uy2')
+    method: DELETE
+  response:
+    body: ""
+    headers:
+      Cache-Control:
+      - no-cache
+      Content-Length:
+      - "0"
+      Date:
+      - Thu, 01 Jul 2021 17:09:57 GMT
+      Server:
+      - Windows-Azure-Table/1.0 Microsoft-HTTPAPI/2.0
+      X-Content-Type-Options:
+      - nosniff
+      X-Ms-Request-Id:
+      - 8fa8ab6f-a002-003e-4e9b-6e7f0a000000
+      X-Ms-Version:
+      - "2019-02-02"
+    status: 204 No Content
+    code: 204
     duration: ""
