--- a/sdk/tables/aztable/recordings/TestTableClient_Storage/TestAddBasicEntity.yaml
+++ b/sdk/tables/aztable/recordings/TestTableClient_Storage/TestAddBasicEntity.yaml
@@ -2,7 +2,7 @@
 version: 1
 interactions:
 - request:
-    body: '{"TableName":"gotable300ozkgs7uceb"}'
+    body: '{"TableName":"gotablemuho094vy5lrg"}'
     form: {}
     headers:
       Accept:
@@ -19,28 +19,28 @@ interactions:
       - azsdk-go-aztable/<version> azsdk-go-aztable/<version> azcore/v0.16.2 (go1.16.5;
         Windows_NT)
       X-Ms-Date:
-      - Wed, 07 Jul 2021 22:09:15 GMT
+      - Thu, 08 Jul 2021 15:45:51 GMT
       X-Ms-Version:
       - "2019-02-02"
     url: https://seankaneprim.table.core.windows.net/Tables
     method: POST
   response:
-    body: '{"odata.metadata":"https://seankaneprim.table.core.windows.net/$metadata#Tables/@Element","TableName":"gotable300ozkgs7uceb"}'
+    body: '{"odata.metadata":"https://seankaneprim.table.core.windows.net/$metadata#Tables/@Element","TableName":"gotablemuho094vy5lrg"}'
     headers:
       Cache-Control:
       - no-cache
       Content-Type:
       - application/json;odata=minimalmetadata;streaming=true;charset=utf-8
       Date:
-      - Wed, 07 Jul 2021 22:09:15 GMT
+      - Thu, 08 Jul 2021 15:45:51 GMT
       Location:
-      - https://seankaneprim.table.core.windows.net/Tables('gotable300ozkgs7uceb')
+      - https://seankaneprim.table.core.windows.net/Tables('gotablemuho094vy5lrg')
       Server:
       - Windows-Azure-Table/1.0 Microsoft-HTTPAPI/2.0
       X-Content-Type-Options:
       - nosniff
       X-Ms-Request-Id:
-      - 8fd00885-4002-0009-087c-73ada6000000
+      - 3d0ff3ba-f002-0041-2d10-74b091000000
       X-Ms-Version:
       - "2019-02-02"
     status: 201 Created
@@ -66,10 +66,10 @@ interactions:
       - azsdk-go-aztable/<version> azsdk-go-aztable/<version> azcore/v0.16.2 (go1.16.5;
         Windows_NT)
       X-Ms-Date:
-      - Wed, 07 Jul 2021 22:09:15 GMT
+      - Thu, 08 Jul 2021 15:45:52 GMT
       X-Ms-Version:
       - "2019-02-02"
-    url: https://seankaneprim.table.core.windows.net/gotable300ozkgs7uceb
+    url: https://seankaneprim.table.core.windows.net/gotablemuho094vy5lrg
     method: POST
   response:
     body: ""
@@ -79,13 +79,13 @@ interactions:
       Content-Length:
       - "0"
       Dataserviceid:
-      - https://seankaneprim.table.core.windows.net/gotable300ozkgs7uceb(PartitionKey='pk001',RowKey='rk001')
+      - https://seankaneprim.table.core.windows.net/gotablemuho094vy5lrg(PartitionKey='pk001',RowKey='rk001')
       Date:
-      - Wed, 07 Jul 2021 22:09:15 GMT
+      - Thu, 08 Jul 2021 15:45:51 GMT
       Etag:
-      - W/"datetime'2021-07-07T22%3A09%3A16.6185818Z'"
+      - W/"datetime'2021-07-08T15%3A45%3A51.6693446Z'"
       Location:
-      - https://seankaneprim.table.core.windows.net/gotable300ozkgs7uceb(PartitionKey='pk001',RowKey='rk001')
+      - https://seankaneprim.table.core.windows.net/gotablemuho094vy5lrg(PartitionKey='pk001',RowKey='rk001')
       Preference-Applied:
       - return-no-content
       Server:
@@ -93,7 +93,7 @@ interactions:
       X-Content-Type-Options:
       - nosniff
       X-Ms-Request-Id:
-      - 8fd008ae-4002-0009-2c7c-73ada6000000
+      - 3d0ff3e8-f002-0041-5810-74b091000000
       X-Ms-Version:
       - "2019-02-02"
     status: 204 No Content
@@ -113,28 +113,67 @@ interactions:
       - azsdk-go-aztable/<version> azsdk-go-aztable/<version> azcore/v0.16.2 (go1.16.5;
         Windows_NT)
       X-Ms-Date:
-      - Wed, 07 Jul 2021 22:09:16 GMT
+      - Thu, 08 Jul 2021 15:45:52 GMT
       X-Ms-Version:
       - "2019-02-02"
-    url: https://seankaneprim.table.core.windows.net/gotable300ozkgs7uceb(PartitionKey='pk001',RowKey='rk001')
+    url: https://seankaneprim.table.core.windows.net/gotablemuho094vy5lrg(PartitionKey='pk001',RowKey='rk001')
     method: GET
   response:
-    body: '{"odata.metadata":"https://seankaneprim.table.core.windows.net/$metadata#gotable300ozkgs7uceb/@Element","odata.etag":"W/\"datetime''2021-07-07T22%3A09%3A16.6185818Z''\"","PartitionKey":"pk001","RowKey":"rk001","Timestamp":"2021-07-07T22:09:16.6185818Z","Float":3.14159,"Integer":10,"String":"abcdef"}'
+    body: '{"odata.metadata":"https://seankaneprim.table.core.windows.net/$metadata#gotablemuho094vy5lrg/@Element","odata.etag":"W/\"datetime''2021-07-08T15%3A45%3A51.6693446Z''\"","PartitionKey":"pk001","RowKey":"rk001","Timestamp":"2021-07-08T15:45:51.6693446Z","Float":3.14159,"Integer":10,"String":"abcdef"}'
     headers:
       Cache-Control:
       - no-cache
       Content-Type:
       - application/json;odata=minimalmetadata;streaming=true;charset=utf-8
       Date:
-      - Wed, 07 Jul 2021 22:09:16 GMT
+      - Thu, 08 Jul 2021 15:45:51 GMT
       Etag:
-      - W/"datetime'2021-07-07T22%3A09%3A16.6185818Z'"
+      - W/"datetime'2021-07-08T15%3A45%3A51.6693446Z'"
       Server:
       - Windows-Azure-Table/1.0 Microsoft-HTTPAPI/2.0
       X-Content-Type-Options:
       - nosniff
       X-Ms-Request-Id:
-      - 8fd008c6-4002-0009-427c-73ada6000000
+      - 3d0ff45f-f002-0041-4410-74b091000000
+      X-Ms-Version:
+      - "2019-02-02"
+    status: 200 OK
+    code: 200
+    duration: ""
+- request:
+    body: ""
+    form: {}
+    headers:
+      Accept:
+      - application/json;odata=minimalmetadata
+      Authorization:
+      - sanitized
+      Dataserviceversion:
+      - "3.0"
+      User-Agent:
+      - azsdk-go-aztable/<version> azsdk-go-aztable/<version> azcore/v0.16.2 (go1.16.5;
+        Windows_NT)
+      X-Ms-Date:
+      - Thu, 08 Jul 2021 15:45:52 GMT
+      X-Ms-Version:
+      - "2019-02-02"
+    url: https://seankaneprim.table.core.windows.net/gotablemuho094vy5lrg()?%24filter=PartitionKey+eq+%27pk001%27
+    method: GET
+  response:
+    body: '{"odata.metadata":"https://seankaneprim.table.core.windows.net/$metadata#gotablemuho094vy5lrg","value":[{"odata.etag":"W/\"datetime''2021-07-08T15%3A45%3A51.6693446Z''\"","PartitionKey":"pk001","RowKey":"rk001","Timestamp":"2021-07-08T15:45:51.6693446Z","Float":3.14159,"Integer":10,"String":"abcdef"}]}'
+    headers:
+      Cache-Control:
+      - no-cache
+      Content-Type:
+      - application/json;odata=minimalmetadata;streaming=true;charset=utf-8
+      Date:
+      - Thu, 08 Jul 2021 15:45:51 GMT
+      Server:
+      - Windows-Azure-Table/1.0 Microsoft-HTTPAPI/2.0
+      X-Content-Type-Options:
+      - nosniff
+      X-Ms-Request-Id:
+      - 3d0ff489-f002-0041-6e10-74b091000000
       X-Ms-Version:
       - "2019-02-02"
     status: 200 OK
@@ -152,10 +191,10 @@ interactions:
       - azsdk-go-aztable/<version> azsdk-go-aztable/<version> azcore/v0.16.2 (go1.16.5;
         Windows_NT)
       X-Ms-Date:
-      - Wed, 07 Jul 2021 22:09:16 GMT
+      - Thu, 08 Jul 2021 15:45:52 GMT
       X-Ms-Version:
       - "2019-02-02"
-    url: https://seankaneprim.table.core.windows.net/Tables('gotable300ozkgs7uceb')
+    url: https://seankaneprim.table.core.windows.net/Tables('gotablemuho094vy5lrg')
     method: DELETE
   response:
     body: ""
@@ -165,13 +204,13 @@ interactions:
       Content-Length:
       - "0"
       Date:
-      - Wed, 07 Jul 2021 22:09:16 GMT
+      - Thu, 08 Jul 2021 15:45:51 GMT
       Server:
       - Windows-Azure-Table/1.0 Microsoft-HTTPAPI/2.0
       X-Content-Type-Options:
       - nosniff
       X-Ms-Request-Id:
-      - 8fd008df-4002-0009-5b7c-73ada6000000
+      - 3d0ff4b9-f002-0041-1d10-74b091000000
       X-Ms-Version:
       - "2019-02-02"
     status: 204 No Content
