--- a/sdk/tables/aztable/recordings/TestTableClient_Storage/TestSetMultipleAccessPolicies.yaml
+++ b/sdk/tables/aztable/recordings/TestTableClient_Storage/TestSetMultipleAccessPolicies.yaml
@@ -2,7 +2,7 @@
 version: 1
 interactions:
 - request:
-    body: '{"TableName":"gotablejmrpbulv642or"}'
+    body: '{"TableName":"gotable4rpn1oqouhbus"}'
     form: {}
     headers:
       Accept:
@@ -19,35 +19,35 @@ interactions:
       - azsdk-go-aztable/<version> azsdk-go-aztable/<version> azcore/v0.16.2 (go1.16.5;
         Windows_NT)
       X-Ms-Date:
-      - Fri, 02 Jul 2021 16:56:29 GMT
+      - Fri, 09 Jul 2021 16:48:35 GMT
       X-Ms-Version:
       - "2019-02-02"
     url: https://seankaneprim.table.core.windows.net/Tables
     method: POST
   response:
-    body: '{"odata.metadata":"https://seankaneprim.table.core.windows.net/$metadata#Tables/@Element","TableName":"gotablejmrpbulv642or"}'
+    body: '{"odata.metadata":"https://seankaneprim.table.core.windows.net/$metadata#Tables/@Element","TableName":"gotable4rpn1oqouhbus"}'
     headers:
       Cache-Control:
       - no-cache
       Content-Type:
       - application/json;odata=minimalmetadata;streaming=true;charset=utf-8
       Date:
-      - Fri, 02 Jul 2021 16:56:29 GMT
+      - Fri, 09 Jul 2021 16:48:34 GMT
       Location:
-      - https://seankaneprim.table.core.windows.net/Tables('gotablejmrpbulv642or')
+      - https://seankaneprim.table.core.windows.net/Tables('gotable4rpn1oqouhbus')
       Server:
       - Windows-Azure-Table/1.0 Microsoft-HTTPAPI/2.0
       X-Content-Type-Options:
       - nosniff
       X-Ms-Request-Id:
-      - cf86799c-2002-0089-0263-6f52a0000000
+      - eeaea336-1002-0014-1be2-74a01a000000
       X-Ms-Version:
       - "2019-02-02"
     status: 201 Created
     code: 201
     duration: ""
 - request:
-    body: <SignedIdentifiers><SignedIdentifier><AccessPolicy><Permission>r</Permission><Expiry>2024-01-01T00:00:00Z</Expiry><Start>2020-01-01T00:00:00Z</Start></AccessPolicy><Id>1</Id></SignedIdentifier><SignedIdentifier><AccessPolicy><Permission>rw</Permission><Expiry>2025-01-01T00:00:00Z</Expiry><Start>2020-01-01T00:00:00Z</Start></AccessPolicy><Id>2</Id></SignedIdentifier></SignedIdentifiers>
+    body: <SignedIdentifiers><SignedIdentifier><Id>empty</Id></SignedIdentifier><SignedIdentifier><AccessPolicy><Permission>r</Permission></AccessPolicy><Id>partial</Id></SignedIdentifier><SignedIdentifier><AccessPolicy><Permission>r</Permission><Expiry>2021-06-08T02:10:09Z</Expiry><Start>2021-06-08T02:10:09Z</Start></AccessPolicy><Id>full</Id></SignedIdentifier></SignedIdentifiers>
     form: {}
     headers:
       Accept:
@@ -55,40 +55,33 @@ interactions:
       Authorization:
       - sanitized
       Content-Length:
-      - "388"
+      - "375"
       Content-Type:
       - application/xml
       User-Agent:
       - azsdk-go-aztable/<version> azsdk-go-aztable/<version> azcore/v0.16.2 (go1.16.5;
         Windows_NT)
       X-Ms-Date:
-      - Fri, 02 Jul 2021 16:56:29 GMT
+      - Fri, 09 Jul 2021 16:48:35 GMT
       X-Ms-Version:
       - "2019-02-02"
-    url: https://seankaneprim.table.core.windows.net/gotablejmrpbulv642or?comp=acl
+    url: https://seankaneprim.table.core.windows.net/gotable4rpn1oqouhbus?comp=acl
     method: PUT
   response:
-    body: |-
-      <?xml version="1.0" encoding="utf-8"?><m:error xmlns:m="http://schemas.microsoft.com/ado/2007/08/dataservices/metadata"><m:code>InvalidXmlDocument</m:code><m:message xml:lang="en-US">XML specified is not syntactically valid.
-      RequestId:cf8679f2-2002-0089-5063-6f52a0000000
-      Time:2021-07-02T16:56:29.8374293Z</m:message></m:error>
+    body: ""
     headers:
       Content-Length:
-      - "327"
-      Content-Type:
-      - application/xml
+      - "0"
       Date:
-      - Fri, 02 Jul 2021 16:56:29 GMT
+      - Fri, 09 Jul 2021 16:48:34 GMT
       Server:
       - Windows-Azure-Table/1.0 Microsoft-HTTPAPI/2.0
-      X-Ms-Error-Code:
-      - InvalidXmlDocument
       X-Ms-Request-Id:
-      - cf8679f2-2002-0089-5063-6f52a0000000
+      - eeaea364-1002-0014-47e2-74a01a000000
       X-Ms-Version:
       - "2019-02-02"
-    status: 400 XML specified is not syntactically valid.
-    code: 400
+    status: 204 No Content
+    code: 204
     duration: ""
 - request:
     body: ""
@@ -102,22 +95,22 @@ interactions:
       - azsdk-go-aztable/<version> azsdk-go-aztable/<version> azcore/v0.16.2 (go1.16.5;
         Windows_NT)
       X-Ms-Date:
-      - Fri, 02 Jul 2021 16:56:29 GMT
+      - Fri, 09 Jul 2021 16:48:36 GMT
       X-Ms-Version:
       - "2019-02-02"
-    url: https://seankaneprim.table.core.windows.net/gotablejmrpbulv642or?comp=acl
+    url: https://seankaneprim.table.core.windows.net/gotable4rpn1oqouhbus?comp=acl
     method: GET
   response:
-    body: "\uFEFF\x3C\x3F\x78\x6D\x6C\x20\x76\x65\x72\x73\x69\x6F\x6E\x3D\"\x31\x2E\x30\"\x20\x65\x6E\x63\x6F\x64\x69\x6E\x67\x3D\"\x75\x74\x66\x2D\x38\"\x3F\x3E\x3C\x53\x69\x67\x6E\x65\x64\x49\x64\x65\x6E\x74\x69\x66\x69\x65\x72\x73\x20\x2F\x3E"
+    body: "\uFEFF\x3C\x3F\x78\x6D\x6C\x20\x76\x65\x72\x73\x69\x6F\x6E\x3D\"\x31\x2E\x30\"\x20\x65\x6E\x63\x6F\x64\x69\x6E\x67\x3D\"\x75\x74\x66\x2D\x38\"\x3F\x3E\x3C\x53\x69\x67\x6E\x65\x64\x49\x64\x65\x6E\x74\x69\x66\x69\x65\x72\x73\x3E\x3C\x53\x69\x67\x6E\x65\x64\x49\x64\x65\x6E\x74\x69\x66\x69\x65\x72\x3E\x3C\x49\x64\x3E\x65\x6D\x70\x74\x79\x3C\x2F\x49\x64\x3E\x3C\x2F\x53\x69\x67\x6E\x65\x64\x49\x64\x65\x6E\x74\x69\x66\x69\x65\x72\x3E\x3C\x53\x69\x67\x6E\x65\x64\x49\x64\x65\x6E\x74\x69\x66\x69\x65\x72\x3E\x3C\x49\x64\x3E\x70\x61\x72\x74\x69\x61\x6C\x3C\x2F\x49\x64\x3E\x3C\x41\x63\x63\x65\x73\x73\x50\x6F\x6C\x69\x63\x79\x3E\x3C\x50\x65\x72\x6D\x69\x73\x73\x69\x6F\x6E\x3E\x72\x3C\x2F\x50\x65\x72\x6D\x69\x73\x73\x69\x6F\x6E\x3E\x3C\x2F\x41\x63\x63\x65\x73\x73\x50\x6F\x6C\x69\x63\x79\x3E\x3C\x2F\x53\x69\x67\x6E\x65\x64\x49\x64\x65\x6E\x74\x69\x66\x69\x65\x72\x3E\x3C\x53\x69\x67\x6E\x65\x64\x49\x64\x65\x6E\x74\x69\x66\x69\x65\x72\x3E\x3C\x49\x64\x3E\x66\x75\x6C\x6C\x3C\x2F\x49\x64\x3E\x3C\x41\x63\x63\x65\x73\x73\x50\x6F\x6C\x69\x63\x79\x3E\x3C\x53\x74\x61\x72\x74\x3E\x32\x30\x32\x31\x2D\x30\x36\x2D\x30\x38\x54\x30\x32\x3A\x31\x30\x3A\x30\x39\x2E\x30\x30\x30\x30\x30\x30\x30\x5A\x3C\x2F\x53\x74\x61\x72\x74\x3E\x3C\x45\x78\x70\x69\x72\x79\x3E\x32\x30\x32\x31\x2D\x30\x36\x2D\x30\x38\x54\x30\x32\x3A\x31\x30\x3A\x30\x39\x2E\x30\x30\x30\x30\x30\x30\x30\x5A\x3C\x2F\x45\x78\x70\x69\x72\x79\x3E\x3C\x50\x65\x72\x6D\x69\x73\x73\x69\x6F\x6E\x3E\x72\x3C\x2F\x50\x65\x72\x6D\x69\x73\x73\x69\x6F\x6E\x3E\x3C\x2F\x41\x63\x63\x65\x73\x73\x50\x6F\x6C\x69\x63\x79\x3E\x3C\x2F\x53\x69\x67\x6E\x65\x64\x49\x64\x65\x6E\x74\x69\x66\x69\x65\x72\x3E\x3C\x2F\x53\x69\x67\x6E\x65\x64\x49\x64\x65\x6E\x74\x69\x66\x69\x65\x72\x73\x3E"
     headers:
       Content-Type:
       - application/xml
       Date:
-      - Fri, 02 Jul 2021 16:56:29 GMT
+      - Fri, 09 Jul 2021 16:48:35 GMT
       Server:
       - Windows-Azure-Table/1.0 Microsoft-HTTPAPI/2.0
       X-Ms-Request-Id:
-      - cf867a3c-2002-0089-1a63-6f52a0000000
+      - eeaea3c2-1002-0014-24e2-74a01a000000
       X-Ms-Version:
       - "2019-02-02"
     status: 200 OK
@@ -135,10 +128,10 @@ interactions:
       - azsdk-go-aztable/<version> azsdk-go-aztable/<version> azcore/v0.16.2 (go1.16.5;
         Windows_NT)
       X-Ms-Date:
-      - Fri, 02 Jul 2021 16:56:29 GMT
+      - Fri, 09 Jul 2021 16:48:36 GMT
       X-Ms-Version:
       - "2019-02-02"
-    url: https://seankaneprim.table.core.windows.net/Tables('gotablejmrpbulv642or')
+    url: https://seankaneprim.table.core.windows.net/Tables('gotable4rpn1oqouhbus')
     method: DELETE
   response:
     body: ""
@@ -148,13 +141,13 @@ interactions:
       Content-Length:
       - "0"
       Date:
-      - Fri, 02 Jul 2021 16:56:29 GMT
+      - Fri, 09 Jul 2021 16:48:35 GMT
       Server:
       - Windows-Azure-Table/1.0 Microsoft-HTTPAPI/2.0
       X-Content-Type-Options:
       - nosniff
       X-Ms-Request-Id:
-      - cf867a82-2002-0089-5663-6f52a0000000
+      - eeaea417-1002-0014-77e2-74a01a000000
       X-Ms-Version:
       - "2019-02-02"
     status: 204 No Content
